QWeakPointer: befriend other QWeakPointers

Commit c677b3b8afcdc1d7b57353826cc01f378cd25e99 added move constructors,
which introduced the issue.

Fixes: QTBUG-100795
Change-Id: I74249c52dc02478ba93cfffd16d2c879b923e352
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 49722de99527a97373df517dcb457f3170693a4f)
Reviewed-by: Marc Mutz <marc.mutz@qt.io>